[tool.poetry]
name = "snippets"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geoserver-rest = "^2.3.4"
GDAL= "3.4.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
minio = "^7.1.12"
pyodm = "^1.5.10"
black = {extras = ["jupyter"], version = "^22.12.0"}
xarray = "^2023.10.1"
rioxarray = "^0.15.0"
pyyaml = "^6.0.1"
matplotlib = ">3.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
